Implement findbugs recomendation: ... invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/pool/trunk@1022324 13f79535-47bb-0310-9956-ffa450edef68